objects/ManuClub_Client_Sleep_Info__c/ManuClub_Client_Sleep_Info__c.object-meta.xml
<CustomObject>
    <label>ManuClub_Client_Sleep_Info</label>
    <nameField>
        <label>ManuClub_Client_Sleep_Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ManuClub_Client_Sleep_Info</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>