objects/ManuClub_Client_Sleep_Info__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account_Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>