objects/ManuClub_Client_Sleep_Info__c/fields/Sleep_Mins__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Mins__c</fullName>
    <label>Sleep_Mins</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>